# rescue-robot

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
constants/: CMakeLists.txt  package.xml
constants/include/constants/: denoise_params.h  dimensions.h  gpio_pins.h  labels.h  objectives_list.h  robot_model.h  topics.h  topics.h.save  topics.h.save.1
construction_check/: CMakeLists.txt  package.xml
construction_check/launch/: construction_check.launch  drive_test.launch
construction_check/src/: arc_main.cpp  drive_test_1_main.cpp  drive_test_2_main.cpp  tof_main.cpp  ultrasonic_main.cpp
controls/: CMakeLists.txt  package.xml
controls/include/controls/: controller.h
controls/src/: arc_pub.cpp  controller.cpp  controls_main.cpp  piHiPri.cpp  softPwm.cpp  softTone.cpp  test_encoder_control.cpp  test_turn_on_spot.cpp  test_turn_with_radius.cpp  wiringPi.cpp
game_day/: CMakeLists.txt  package.xml
game_day/launch/: game_day.launch
localization/: CMakeLists.txt  package.xml
localization/include/localization/: ParticleFilter.h  SimpleLocalizer.h
localization/launch/: localization_test.launch
localization/msg/: Pose.msg
localization/src/: ParticleFilter.cpp  SimpleLocalizer.cpp  localization_main.cpp
mapperception/: CMakeLists.txt  package.xml
mapperception/include/: LabeledMap.hpp  LabelledMap.hpp  Map.hpp  Mapper.hpp  TerrainMap.hpp
mapperception/include/mapperception/: BaseMap.h  CostMap.h  LabelMap.h  LabeledMap.h  Mapper.h  TerrainMap.h
mapperception/launch/: mapping_test.launch
mapperception/msg/: Map.msg  MapRow.msg
mapperception/src/: BaseMap.cpp  CostMap.cpp  LabelMap.cpp  LabeledMap.cpp  Mapper.cpp  TerrainMap.cpp  main.cpp  mapping_main.cpp
mapperception/srv/: ObjectLocation.srv
mapping/include/: Mapper.hpp
mapping/src/: Mapper.cpp
messages/: CMakeLists.txt  package.xml
messages/msg/: Arc.msg
objectives/: CMakeLists.txt  package.xml
objectives/include/objectives/: ObjectiveManager.h
objectives/includes/objectives/: ObjectiveManager.h
objectives/msg/: ActiveObjectives.msg
objectives/src/: ObjectiveManager.cpp  objectives_main.cpp
planning/: CMakeLists.txt  package.xml
planning/include/planning/: AStarPlanner.h  GoalPlanner.h  RobotPath.h
planning/msg/: Arc.msg  ControlCommand.msg
planning/src/: AStarPlanner.cpp  GoalPlanner.cpp  RobotPath.cpp  dummy_planner.cpp  planning_main.cpp
sensors/: CMakeLists.txt  package.xml
sensors/include/sensors/: GPIOClass.h  MotorEncoder.h  MotorEncoderISR.h  tof.h
sensors/launch/: tof_debug.launch  tof_test.launch
sensors/msg/: Distance.msg  IMU.msg  Ultrasonic.msg
sensors/src/: GPIOClass.cpp  MotorEncoder.cpp  colour_sensor_main.cpp  encoder_main.cpp  encoder_main_old.cpp  hall_effect_sensor_main.cpp  imu_sensor_main.cpp  photodiode_sensor_main.cpp  tof.cpp  tof_main.cpp  tof_sensor_main.cpp  ultrasonic_sensor_main.cpp
topics/: CMakeLists.txt  package.xml
topics/include/topics/: topics.h
