<?xml version="1.0"?>
<package format="2">
  <name>construction_check</name>
  <version>0.0.0</version>
  <description>The construction_check package</description>

  <maintainer email="avery@todo.todo">avery</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensors</build_depend>
  <build_depend>planning</build_depend>
  <build_depend>messages</build_depend>
  <build_depend>topics</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensors</exec_depend>
  <exec_depend>planning</exec_depend>
  <exec_depend>messages</exec_depend>
  <exec_depend>topics</exec_depend>

</package>
